force-app/main/default/objects/Compliance_Checklist__c/Compliance_Checklist__c.object-meta.xml
<CustomObject>
    <label>Compliance Checklist</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Compliance Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>