force-app/main/default/objects/Compliance_Checklist__c/fields/Q1_Question__c.field-meta.xml
<CustomField>
    <fullName>Q1_Question__c</fullName>
    <label>Q1 Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>