force-app/main/default/objects/Compliance_Checklist__c/fields/Q1_Response__c.field-meta.xml
<CustomField>
    <fullName>Q1_Response__c</fullName>
    <label>Q1 Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>