force-app/main/default/objects/Compliance_Checklist__c/fields/Q2_Question__c.field-meta.xml
<CustomField>
    <fullName>Q2_Question__c</fullName>
    <label>Q2 Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>